2009-09-10  Erik Arvidsson  <arv@chromium.org>

Reviewed by Eric Seidel.

        Fixes issue where focused elements did not get blur and focus events when the window was blurred and focused.
        https://bugs.webkit.org/show_bug.cgi?id=27105

        * fast/events/blur-focus-window-should-blur-focus-element-expected.txt: Added.
        * fast/events/blur-focus-window-should-blur-focus-element.html: Added.
        * fast/events/resources/blur-focus-window-should-blur-focus-element.js: Added.
        (divElement.onfocus.divElement.onblur.window.onfocus.window.onblur.innerDiv.onfocus.innerDiv.onblur.iframe.onfocus.iframe.onblur):
        (testNextEvent):
        * fast/events/resources/tabindex-focus-blur-all.js:
        (test):
        * fast/events/tabindex-focus-blur-all-expected.txt:
2009-09-10  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Eric Seidel.

        Fixes issue where focused elements did not get blur and focus events when the window was blurred and focused.
        https://bugs.webkit.org/show_bug.cgi?id=27105

        Test: fast/events/blur-focus-window-should-blur-focus-element.html

        * page/FocusController.cpp:
        (WebCore::dispatchEventsOnWindowAndFocusedNode):
        (WebCore::FocusController::setFocused):
        (WebCore::FocusController::setActive):

Canonical link: https://commits.webkit.org/39826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48257 268f45cc-cd09-0410-ab3c-d52691b4dbfc